# leanMultisig

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
crates/air/src/: prove.rs  validity_check.rs  verify.rs
crates/backend/air/src/: lib.rs  symbolic.rs
crates/backend/air/src/constraint_folder/: normal.rs  packed.rs
crates/backend/fiat-shamir/src/: challenger.rs  errors.rs  lib.rs  merkle_pruning.rs  prover.rs  traits.rs  transcript.rs  utils.rs  verifier.rs
crates/backend/fiat-shamir/tests/: grinding.rs
crates/backend/field/src/: exponentiation.rs  field.rs  helpers.rs  op_assign_macros.rs
crates/backend/field/src/packed/: packed_traits.rs
crates/backend/koala-bear/src/: benchmark_poseidons.rs  lib.rs  poseidon1_koalabear_16.rs  poseidon2_koalabear.rs
crates/backend/koala-bear/src/aarch64_neon/: mod.rs
crates/backend/koala-bear/src/monty_31/: data_traits.rs  mod.rs  monty_31.rs  poseidon2_monty.rs  utils.rs
crates/backend/koala-bear/src/monty_31/aarch64_neon/: packing.rs  poseidon_helpers.rs  utils.rs
crates/backend/koala-bear/src/monty_31/no_packing/: mod.rs
crates/backend/koala-bear/src/monty_31/x86_64_avx2/: packing.rs  poseidon_helpers.rs
crates/backend/koala-bear/src/monty_31/x86_64_avx512/: mod.rs  packing.rs  poseidon_helpers.rs
crates/backend/koala-bear/src/poseidon2/: external.rs  internal.rs  mod.rs
crates/backend/koala-bear/src/quintic_extension/: extension.rs  packed_extension.rs  packing.rs
crates/backend/poly/src/: dense_poly.rs  eq_mle.rs  evals.rs  point.rs  utils.rs
crates/backend/poly/src/mle/: mle_custom.rs
crates/backend/sumcheck/: Cargo.toml
crates/backend/sumcheck/src/: lib.rs  product_computation.rs  prove.rs  quotient_computation.rs  sc_computation.rs  split_eq.rs  verify.rs
crates/backend/symetric/src/: permutation.rs  sponge.rs
crates/backend/utils/src/: lib.rs
crates/lean_compiler/: Cargo.toml  snark_lib.py  zkDSL.md
crates/lean_compiler/src/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  grammar.pest  instruction_encoder.rs  lang.rs  lib.rs
crates/lean_compiler/src/ir/: bytecode.rs  instruction.rs
crates/lean_compiler/src/parser/: grammar.rs
crates/lean_compiler/src/parser/parsers/: expression.rs  function.rs  literal.rs  mod.rs  statement.rs
crates/lean_compiler/tests/: test_compiler.rs  test_performance.rs
crates/lean_compiler/tests/test_data/: perf_constant_if_with_conditions.py  program_110.py  program_112.py  program_114.py  program_118.py  program_12.py  program_137.py  program_142.py  program_143.py  program_144.py  program_15.py  program_166.py  program_172.py  program_178.py  program_179.py  program_180.py  program_64.py  program_80.py  program_88.py
crates/lean_prover/: Cargo.toml
crates/lean_prover/src/: lib.rs  prove_execution.rs  test_zkvm.rs  trace_gen.rs  verify_execution.rs
crates/lean_vm/: Cargo.toml
crates/lean_vm/src/core/: constants.rs  types.rs
crates/lean_vm/src/diagnostics/: error.rs  exec_result.rs  mod.rs  profiler.rs
crates/lean_vm/src/execution/: context.rs  memory.rs  runner.rs  tests.rs
crates/lean_vm/src/isa/: bytecode.rs  hint.rs  instruction.rs
crates/lean_vm/src/isa/operands/: mem_or_constant.rs  mem_or_fp_or_constant.rs
crates/lean_vm/src/tables/: table_enum.rs  table_trait.rs  utils.rs
crates/lean_vm/src/tables/execution/: air.rs  mod.rs
crates/lean_vm/src/tables/extension_op/: air.rs  exec.rs  mod.rs
crates/lean_vm/src/tables/poseidon_16/: mod.rs  trace_gen.rs
crates/rec_aggregation/: Cargo.toml  fiat_shamir.py  hashing.py  main.py  main_sphincs.py  recursion.py  sphincs_aggregate.py  sphincs_fors.py  sphincs_hypertree.py  sphincs_utils.py  sphincs_wots.py  utils.py  whir.py  xmss_aggregate.py
crates/rec_aggregation/src/: benchmark.rs  compilation.rs  lib.rs  sphincs.rs
crates/rec_aggregation/tests/: test_chain_hash.py  test_chain_hash.rs  test_fold_roots.py  test_fors.py  test_hashing.py  test_hashing.rs  test_hypertree_merkle_verify.py  test_hypertree_verify.py  test_log2_ceil.py  test_log2_ceil.rs  test_message_decompose.py  test_sphincs_aggregate.py  test_sphincs_aggregate.rs  test_sphincs_utils.rs  test_sphincs_wots.py
crates/sphincs/: Cargo.toml  SPHINCS_ARCHITECTURE.md  params.md
crates/sphincs/src/: core.rs  fors.rs  hypertree.rs  lib.rs  signers_cache.rs  sphincs.rs  wots.rs  xmss.rs
crates/sphincs/test_data/: benchmark_signers.json
crates/sphincs/tests/: sphincs_test.rs  xmss_tests.rs
crates/sub_protocols/src/: logup.rs  quotient_gkr.rs  stacked_pcs.rs
crates/utils/src/: lib.rs  multilinear.rs  poseidon.rs  poseidon2.rs  wrappers.rs
crates/whir/src/: commit.rs  config.rs  dft.rs  merkle.rs  open.rs  utils.rs  verify.rs
crates/whir/tests/: run_whir.rs
crates/xmss/: Cargo.toml
crates/xmss/src/: lib.rs  signers_cache.rs  wots.rs  xmss.rs
crates/xmss/tests/: xmss_tests.rs
docs/: PARALLEL_RANGE_BUG.md  SPHINCS_ARCHITECTURE.md  SPHINCS_BENCHMARK_DESIGN.md  SPHINCS_BENCHMARK_PLAN.md  SPHINCS_ZKDSL_PLAN.md  XMSS_INTERNALS.md
misc/: bibliography.bib  minimal_zkVM.tex
src/: lib.rs  main.rs  prove_poseidons.rs
tests/: test_lean_multisig.rs
