[package]
name = "lean_vm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
xmss.workspace = true
rand.workspace = true
tracing.workspace = true
air.workspace = true
backend.workspace = true
itertools.workspace = true
