[package]
name = "rec_aggregation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
prox-gaps-conjecture = ["lean_prover/prox-gaps-conjecture"]

[dependencies]
utils.workspace = true
xmss.workspace = true
rand.workspace = true
sphincs.workspace = true

tracing.workspace = true
air.workspace = true
sub_protocols.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
lean_prover.workspace = true
backend.workspace = true
postcard.workspace = true
lz4_flex.workspace = true
serde.workspace = true
