[package]
name = "sphincs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]

rand.workspace = true
utils.workspace = true
backend.workspace = true
serde.workspace = true
rayon.workspace = true
sha3.workspace = true
lz4_flex.workspace = true
postcard.workspace = true

[dev-dependencies]
postcard.workspace = true